# my_example

./: .gitignore  README.md
CalculateCRC/: CMakeLists.txt  main.cpp  xmodem.cpp  xmodem.h
QSerialTest/: CMakeLists.txt  com_test.cpp  com_test.h  consoleform.cpp  consoleform.h  main.cpp
QSerialTest/terminal/: CMakeLists.txt  consoleform.cpp
StaticMethods/: CMakeLists.txt  class1.cpp  class1.h  main.cpp
build-StaticMethods-Desktop_Qt_5_12_5_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  StaticMethods.cbp  cmake_install.cmake
build-inheritance-Desktop_Qt_5_12_5_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  cmake_install.cmake  inheritance.cbp
build-macConverter-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  cmake_install.cmake  macConverter.cbp
build-macConverter-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/macConverter_autogen/: mocs_compilation.cpp
build-parser_log_chipprogusb-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  cmake_install.cmake  parser_log_chipprogusb.cbp
build-parser_log_chipprogusb-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/parser_log_chipprogusb_autogen/: mocs_compilation.cpp
build-qt_signals-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  cmake_install.cmake  qt_signals_slots.cbp
build-qt_signals-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/untitled_autogen/: mocs_compilation.cpp
build-qt_signals-Desktop_Qt_5_12_5_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  cmake_install.cmake  qt_signals_slots.cbp
build-qt_tail-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  cmake_install.cmake  qt_tail.cbp
build-qt_tail-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/qt_tail_autogen/: mocs_compilation.cpp
build-set_baikal-Desktop_Qt_5_12_4_MinGW_32_bit-u0412u044bu043fu0443u0441u043a/: CMakeCache.txt  Makefile  cmake_install.cmake  set_baikal.cbp
build-set_baikal-Desktop_Qt_5_12_4_MinGW_32_bit-u0412u044bu043fu0443u0441u043a/set_baikal_autogen/: moc_predefs.h  mocs_compilation.cpp
build-set_percent-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  cmake_install.cmake  set_percent.cbp
build-set_percent-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/set_percent_autogen/: mocs_compilation.cpp
build-terminal-Desktop_Qt_5_13_0_MinGW_32_bit-u0412u044bu043fu0443u0441u043a/: CMakeCache.txt  Makefile  cmake_install.cmake  terminal.cbp
build-terminal-Desktop_Qt_5_13_0_MinGW_32_bit-u0412u044bu043fu0443u0441u043a/terminal_autogen/: moc_predefs.h  mocs_compilation.cpp
build-terminal-Desktop_Qt_5_13_0_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  cmake_install.cmake  terminal.cbp
build-terminal-Desktop_Qt_5_13_0_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/terminal_autogen/: moc_predefs.h  mocs_compilation.cpp
build-the_visibility_of_variables-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  cmake_install.cmake  the_visibility_of_variables.cbp
cicles/: 05_wait_for_the_end.cpp  05_wait_for_the_end.h  sqlseterp.cpp  sqltoerp.cpp  sqltoerp.h  waitfortheend.ui
cicles/erp/: CMakeLists.txt  connectdb.cpp  connectdb.h  connectlibpq.cpp  connectlibpq.h  generatedmacaddres.cpp  generatedmacaddres.h  globalerp.cpp  globalerp.h  sqlseterp.h
cmake_lib_to_lib/: CMakeLists.txt  README.md  main.cpp
cmake_lib_to_lib/lib1/: CMakeLists.txt
cmake_lib_to_lib/lib1/sub/: file1.cpp  file1.h
cmake_lib_to_lib/lib2/: CMakeLists.txt
cmake_lib_to_lib/lib2/sub/: file2.cpp  file2.h
cuda_sparsematrix/: CMakeLists.txt  a01.txt  b01.txt  particle.h  sparsematrix.h  test.cu
i2cTLVGenerator/: CMakeLists.txt  generatefromtlv.cpp  generatefromtlv.h  generatefromtlv.ui  main.cpp  read_tlv.cpp  read_tlv.h  tlv_prepare.cpp  tlv_prepare.h
i2cTLVGenerator/crc-master/: crc.cpp  crc.h  cyg_crc.h
inheritance/: CMakeLists.txt  main.cpp
macConverter/: CMakeLists.txt  convert_mac.cpp  convert_mac.h  main.cpp  prepare_mac.cpp  prepare_mac.h
parser_log_chipprogusb/: CMakeLists.txt  infowindow.cpp  infowindow.h  infowindow.ui  main.cpp  readlog.cpp  readlog.h
qt_new_delete/: CMakeLists.txt  README.md  main.cpp  myclass.cpp  myclass.h
qt_new_delete/build-new_delete-Desktop_Qt_5_12_4_MinGW_32_bit-u0412u044bu043fu0443u0441u043a/: CMakeCache.txt  cmake_install.cmake  new_delete.cbp
qt_new_delete/build-new_delete-Desktop_Qt_5_12_4_MinGW_32_bit-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  cmake_install.cmake  new_delete.cbp
qt_signals/: CMakeLists.txt  api_from_ux.cpp  api_from_ux.h  first.cpp  first.h  main.cpp  middle.cpp  middle.h  readme.md  second.cpp  second.h
qt_signals/ux/: wait_for_the_end.cpp  wait_for_the_end.h  waitfortheend.ui
qt_tail/: CMakeLists.txt  README.md  main.cpp  read_example.cpp  read_example.h  tail_main.cpp  tail_main.h
set_baikal/: CMakeLists.txt  main.cpp  setbaikal.cpp  setbaikal.h
set_percent/: CMakeLists.txt  README.md  calc_for_uart.cpp  calc_for_uart.h  calculate_for_list.cpp  calculate_for_list.h  main.cpp
set_percent/example/: example_uart.cpp  example_uart.h
set_percent/set/: setuart.cpp  setuart.h
terminal/: CMakeLists.txt  CMakeLists.txt.user.0824f79.4.9-pre1  _termmainwindow.ui  consoleform.cpp  consoleform.h  consoleform.ui  main.cpp  runprepare.cpp  runprepare.h  setbaikal.cpp  setbaikal.h  step_08_to_kernel.cpp  step_08_to_kernel.h  step_kernel.cpp  step_kernel.h  terminal.pro  terminal.pro.user.9788610.21
terminal/prepare_input_console/: piconsole.cpp  piconsole.h
terminal/settings/: percentwaitfortheend2.cpp  percentwaitfortheend2.h  threadwaitcom.cpp  threadwaitcom.h
the_visibility_of_variables/: CMakeLists.txt  main.cpp  myclass1.cpp  myclass1.h
(+30 files in other folders)
